@@ -31,6 +31,8 @@
 				<string>id</string>
 				<key>onEdit</key>
 				<string>id</string>
+				<key>onHostComboChanged</key>
+				<string>id</string>
 				<key>onOk</key>
 				<string>id</string>
 				<key>onUp</key>
