@@ -37,6 +37,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{513, 72}, {1094, 956}}</string>
+	<string>{{542, 83}, {1195, 1084}}</string>
 </dict>
 </plist>
