@@ -42,9 +42,7 @@ class PreferenceDialog < NSObject
     onOverrideLogFontClicked(nil)
     onOverrideNickFormatClicked(nil)
     showFontDescription
-    
     ['(%n) ', '%n: ', '<%n> ', '<%9n> ', '<%-9n> ', '<%@%n> '].each {|i| @theme_nick_format.addItemWithObjectValue(i) }
-    
     show
   end
   
