@@ -1,3 +1,9 @@
+2008-01-26  Satoshi Nakagawa <artension@gmail.com>
+
+	Added servers to the server list.
+	Fixed a bug, disconnect menu didn't work while connecting.
+	Fixed a bug, cancel reconnect menu should disable while connecting for the first time.
+
 2008-01-24  Satoshi Nakagawa <artension@gmail.com>
 
 	Added '%-9n' support for nick format.
